Revision history for Neo4j::Driver

0.4653  2024-04-09

 - Returning a Result object from a managed transaction function now issues
   a warning that the Result may not be valid outside the function.
 - Minor testing improvements.

0.46  2024-03-03

 - Add support for byte array values via Bolt and Jolt (Neo4j::Types v2).
 - Fix Record->get() to not require its argument to be created as number when
   used as index, or created as string when used as field name.
 - Add check to prevent the HTTP-only concurrent_tx feature from being used
   with neo4j: URIs.
 - Add check to prevent plugin() after session().
 - Update the "experimental" warning in the plug-in API documentation.
 - Calling list methods in scalar context is no longer experimental.
 - Avoid crash of types-temporal.t on Win32.

0.45  2024-02-16

 - The boolean values used in HTTP query results are no longer chosen
   by the JSON coder. Perl core booleans are used on v5.36 and newer;
   on older Perl versions, JSON::PP booleans are used. (GH #16)

0.44  2024-02-06

 - Result->peek() is no longer experimental.
 - Result->consume() is no longer experimental.
 - Result->summary() is discouraged in favour of consume().
 - Internal change: Result->fetch() now detects an exhausted result stream
   immediately when the last record is retrieved.
 - Minor testing improvements.

0.43  2024-01-31

 - Accept neo4j: URIs, converting them to bolt / http / https.
 - Change default URI from http://localhost to neo4j://127.0.0.1.

0.42  2023-12-14

 - Add support for spatial and temporal Cypher values (Neo4j::Types v2).

0.41  2023-11-21

 - Calling element_id() on nodes and relationships from Neo4j version 4
   and earlier issues a warning. It will not become fatal.
 - New Neo4j::Driver::Types doc as an initial step towards Neo4j::Types v2.

0.40  2023-07-19

 - Add documentation that calling element_id() on nodes and relationships
   from Neo4j version 4 and earlier might change to become a fatal error.

0.39  2023-07-06