@@ -89,6 +89,9 @@ The driver will currently give warnings when using concurrent
 transactions on HTTP I<without> enabling this option, but these
 warnings will become fatal errors in driver S<version 1.xx>.
 
+Using concurrent transactions will make your code less portable.
+This feature exists primarily to support legacy applications.
+
 =head2 cypher_params
 
  $driver->config( cypher_params => v2 );
