@@ -4,6 +4,7 @@ Revision history for Neo4j::Driver
 
  - Returning a Result object from a managed transaction function now issues
    a warning that the Result may not be valid outside the function.
+ - Clarify in documentation that concurrent_tx is a legacy feature.
  - Minor testing improvements.
 
 0.46  2024-03-03
